@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - epn: improve timeout handling
+
 1.3.3    Fri Apr 28 09:55:33 CEST 2023
           - parse shell args to execute more commands without shell
           - use internal negate if command starts with .../negate to safe that fork
